adjust code order + layout to solve overflow

--- a/static/css/default.css
+++ b/static/css/default.css
@@ -1,4 +1,3 @@
-
 /* ISSUE: s1 is overflowing when the screen size is under 800px 🧐 */
 :root {
   --mainColor: #eaeaea;
@@ -349,27 +348,6 @@ p {
   font-size: 14px;
 }
 
-/*如果螢幕寬度為 1200px 以下，就套用 css 設定*/
-@media screen and (max-width: 1200px) {
-  .main-container {
-    width: 95%;
-  }
-}
-
-/*如果螢幕寬度為 1200px 以下，就套用 css 設定*/
-@media screen and (max-width: 800px) {
-  .intro-wrapper {
-    grid-template-columns: 1fr;
-    grid-template-areas:
-      "nav-wrapper"
-      "left-column"
-      "right-column";
-  }
-  .right-column {
-    justify-content: center;
-  }
-}
-
 #submit-btn {
   background-color: var(--btnColor);
   margin-top: 10px;
@@ -408,4 +386,81 @@ p {
 #contact-form textarea {
   min-height: 100px;
   font-size: 14px;
+}
+
+/*如果螢幕寬度為 1200px 以下，就套用 css 設定*/
+@media screen and (max-width: 1200px) {
+  .main-container {
+    width: 95%;
+  }
+}
+
+/*如果螢幕寬度為 1200px 以下，就套用 css 設定*/
+@media screen and (max-width: 800px) {
+  .intro-wrapper {
+    grid-template-columns: 1fr;
+    grid-template-areas:
+      "nav-wrapper"
+      "left-column"
+      "right-column";
+  }
+  .right-column {
+    justify-content: center;
+  }
+
+  #preview-shadow {
+    margin-bottom: 1rem;
+    padding: 5px;
+  }
+
+  #preview {
+    padding: 0;
+    border: none;
+    background-color: var(--previewShadow);
+  }
+  h3,
+  #preview p {
+    margin-left: 1rem;
+  }
+
+  #corner-tl,
+  #corner-tr,
+  #corner-bl,
+  #corner-br {
+    display: none;
+  }
+  .nav-wrapper {
+    justify-content: flex-start;
+    flex-wrap: wrap;
+  }
+}
+
+@media (max-width: 500px) {
+  .left-column,
+  .right-column {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  #preview-shadow,
+  #preview {
+    width: 250px;
+  }
+
+  .about-wrapper {
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+}
+
+@media (max-width: 350px) {
+  .about-wrapper {
+    padding-left: 0;
+  }
+
+  #preview-shadow,
+  #preview {
+    width: 220px;
+  }
 }
